--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -7,7 +7,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, user-scalable=no, shrink-to-fit=no"
     />
-    <meta name="theme-color" content="#dd105e" />
+    <meta name="theme-color" content="#fff" />
     <meta
       name="description"
       content="Web site created using create-react-app"
